feat(langChain): suporte ao framework e ecossistema do LangChain no projeto
